--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,9 @@ input[type="submit"],#PPMiniCart .minicart-submit,.w3ls_vegetables ul li a,input
 	-ms-transition: .5s ease-in;
 }
 .agileits_header{
-	background:#212121;
+	background:#ff0000;
+    width: all;
+    height: 50px;
 }
 .w3l_offers{
 	float:left;
